<resources>
    <string name="app_name">Jerick\'s Jukebox</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change app theme</string>
    <string name="chose_scan_type">Choose scan type</string>
    <string name="scan_all">Scan all device folders</string>
    <string name="only_some">Let me choose what folders are scanned</string>
    <string name="saveTxt">Save Changes</string>
    <string name="choose_folders">Choose Folders</string>
    <string name="pick_theme">Pick A Theme</string>
    <string name="change_language">Change app language</string>
    <string name="pick_lang">Pick A Language</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string-array name="languages">
        <item name="english">English</item>
        <item name="french">French</item>
        <item name="spanish">Spanish</item>
        <item name="russian">Russian</item>
        <item name="portuguese">Portuguese</item>
    </string-array>
    <string-array name="theme_names">
        <item name="light">Light Theme</item>
        <item name="dark">Dark Theme</item>
        <item name="orange">Orange Theme</item>
        <item name="red">Red Theme</item>
    </string-array>
</resources>
