<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="3"
        android:text="@android:string/cancel" />

    <TextView
        android:id="@+id/themeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/change_theme"
        android:textSize="18sp" />

    <Button
        android:id="@+id/themeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:onClick="showThemePicker"
        android:text="@string/pick_theme" />

    <TextView
        android:id="@+id/fileIndexTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/chose_scan_type"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/scanTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0">

        <RadioButton
            android:id="@+id/allFolders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_all" />

        <RadioButton
            android:id="@+id/choseFolders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/only_some" />

    </RadioGroup>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/saveTxt" />

    <Button
        android:id="@+id/choseFoldersBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="3"
        android:enabled="false"
        android:text="@string/choose_folders" />

    <TextView
        android:id="@+id/langTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/change_language"
        android:textSize="18sp" />

    <Button
        android:id="@+id/languageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="3"
        android:onClick="showLanguagePicker"
        android:text="@string/pick_lang" />

</GridLayout>